--- a/popup.html
+++ b/popup.html
@@ -3,10 +3,44 @@
 <style>
 
 body {
-	width: 300px;
-	height: 100px;
+	width: 400px;
+	/*height: 100px;*/
+	background-color: #FFFFF0;
+	padding: 5px 10px 10px 10px;
 }
 
+h1 {
+	font-size: 16px;
+
+}
+
+h2 {
+	font-size: 14px;
+	margin: 0px;
+}
+
+.moreInfo: {
+	margin-bottom: 20px;
+}
+
+.complaintItem {
+	background-color: #e6e6e6;
+	padding: 10px;
+	margin-bottom: 10px;
+}
+
+.three {
+	font-size: 10px;
+	text-align: center;
+}
+
+.category {
+	font-weight: bold;
+}
+
+#headline {
+	text-align: center;
+}
 
 </style>
 </head>
@@ -15,7 +49,10 @@ body {
 <script type="text/javascript" src="popup.js"></script>
 
 <div id="complaints">
-	<ul id="complaint-list"></ul>
+<div id="headline"></div>
+
+	<div class="complaintList"></div>
+	<div class="three"><p><a href="http://www1.nyc.gov/311/">Visit NYC 311</a></p></div>
 </div>
 
 </body>
