--- a/popup.html
+++ b/popup.html
@@ -52,7 +52,7 @@ h2 {
 <div id="headline"></div>
 
 	<div class="complaintList"></div>
-	<div class="three"><p><a href="http://www1.nyc.gov/311/">Visit NYC 311</a></p></div>
+	<div class="three"><p><a target="_blank" href="http://www1.nyc.gov/311/">Visit NYC 311</a></p></div>
 </div>
 
 </body>
