--- a/popup.html
+++ b/popup.html
@@ -50,9 +50,10 @@ h2 {
 
 <div id="complaints">
 <div id="headline"></div>
+<div id="disclaimer"></div>
 
 	<div class="complaintList"></div>
-	<div class="three"><p><a target="_blank" href="http://www1.nyc.gov/311/">Visit NYC 311</a></p></div>
+	<div class="three"></div>
 </div>
 
 </body>
